# Watch_ESP32

Documents/Apuntes/Cuarto_Anio/STR/STR_Flight_Simulator-main/FSS-v1/: button_interrupt.ads  button_interrupt.ali  data_scenarios.ads  data_scenarios.ali  devicesfss_v1.adb  devicesfss_v1.ads  devicesfss_v1.ali  force_external_interrupt_2.ali  fss.adb  fss.ads  fss.ali  lista_scenarios.ads  lista_scenarios.ali  main  main.ali  main.map  main.nm  salida.odt  salida.txt  salida_planificacion.txt  scenario_v0.ads  scenario_v1.ads  scenario_v1.ali  test_alabeo_cabeceo.ads  test_alabeo_cabeceo.ali  test_colisiones.ads  test_colisiones.ali  test_general.ads  test_modo_piloto.ads  test_motores.ads  test_motores.ali  tools.ali  workload.ali
Documents/Apuntes/EntregaPoo/God/connect-4-main/: README.md
Documents/Apuntes/Tercer Año/PHR/Proyecto/: README.md
Watch_ESP32/: CMakeLists.txt  partitions.csv
Watch_ESP32/components/display/: CMakeLists.txt  display.c
Watch_ESP32/components/display/include/: display.h
Watch_ESP32/components/mqtt_data_send/: CMakeLists.txt  Kconfig.projbuild  mqtt_data_send.c
Watch_ESP32/components/mqtt_data_send/include/: mqtt_data_send.h
Watch_ESP32/components/sensors/: CMakeLists.txt  sensors.c
Watch_ESP32/components/sensors/include/: sensors.h
Watch_ESP32/components/ssd1306/: Kconfig.projbuild
Watch_ESP32/components/wifi/: CMakeLists.txt  Kconfig.projbuild  wifi.c
Watch_ESP32/components/wifi/include/: wifi.h
Watch_ESP32/main/: main.c
Watch_ESP32/spiffs/: index.html  style.css
(+138 files in other folders)
